[package]
name = "rce_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
